--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 *{
-	margin:0;
+	margin: 0;
 	padding: 0;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Palatino Linotype; 
 }
 
 #container{
@@ -22,9 +22,9 @@ header{
 
 header h1 {
 	top:30px;
-	padding: 0;
-	margin: 0;
+	padding: 0 0 0 20px;
 	font-size: 30px;
+
 }
 
 header h2 {
@@ -33,13 +33,7 @@ header h2 {
 	/*font-weight: normal;*/
 }
 
-
 /************Navegação************/
-
-.navbar {
-	background-color: #96281B;
-	margin: 0 auto;
-}
 
 nav#menu {
 	display: block;
@@ -48,21 +42,21 @@ nav#menu {
 	left: 0px;*/
 }
 
-nav#menu ul {
+nav#menu ul{
 	top:25px;
 	margin: 0;
 	padding: 0 0 0 0;
 	/*list-style: none;*/
 }
 
-nav#menu li {
+nav#menu li{
 	display: inline-block;
 	background-color: #F2784B;
 	padding: 5px;
 	margin: 2px;
 }
 
-nav#menu li a {
+nav#menu li a{
 	color: #FDE3A7;
 	text-decoration: none;
 }
@@ -71,60 +65,76 @@ nav#menu li:hover a {
   color: #96281B;
 }
 
-/************  Conteúdo  ************/
-
-.cta {
-	margin: 0 0 20px 0;
-}
-
-.cta-button {	
-	background-color: #96281B;
-	border: none;
-	border-radius: 10px;
-	color: white;
-	font-size: 32px;
-	padding: 8px 16px;
-}
-
-.cta-title {
-	margin: 20px 0;
-}
-
-.card {	
-	box-sizing: border-box;	
-	font-size: 18px;
-	height: 150px;
-	padding: 10px;
-	text-align: center;
-	width: 150px;
-	margin: 0 20px;
-}
-
-.info-cards {
-	box-sizing: border-box;
-	display: flex;
-	justify-content: center;
-	margin: 0 0 30px 0;
-}
-
-.how-to-use {
-	font-size: 24px;
-	margin: 0 auto;
-	text-align: center;
-	margin: 0 0 10px 0;
-}
-
-.material-icons {
-	font-size: 50px;
-}
-
 /************Conteúdo************/
 
-#conteudo
+#principal {
+	margin: 0 auto;
+}
+
+h3#titulo {
+	text-align: center;
+	padding: 10px;
+	background-color: #C0C0C0;
+}
+
+/************Formulário************/
+
+fieldset {
+	margin: 10px;
+	padding: 5px;
+	background-color: #A9A9A9;
+}
+
+legend{
+	border: 1px solid;
+	background-color: #A9A9A9;
+}
+
+h4, h5{
+	font-family: Arial;
+}
+
+#dadosMcv, #dadosPi{
+	width: 450px;
+	float: left;
+}
+
+label{
+	display: block;
+	width: 100%;
+	position: relative;
+	height: 50px;
+}
+
+label.col2{
+	float: right;
+}
+
+label > span{
+	display: block;
+	width: 130px;
+	float: left;
+	border-top: 1px dashed;
+}
+
+#leituraMcv > label{
+	height: 30px;
+	width: 50%;
+}
+
+#leituraMcv > label > span{
+	width: 60px;
+}
+
+span + input{
+	width: 100px;
+	margin-left: 10px;
+	border: 1px solid;
+}
 
 /************Rodapé************/
 
-footer {
+footer{
 	width: 100%;
 	background-color: #96281B;
 	margin: 0 auto;
