--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -6,59 +6,74 @@
 }
 
 #container{
-	min-width: 1024px;
+	position: absolute;
 	width: 100%;
 	margin: 0 auto;
+	background-color: gray;
 }
 
 /************Cabeçalho************/
 
 header{
-	width: 100%;
-	background-color: #96281B;
+	background: -webkit-gradient(linear, left top, right top, from(#96281B), to(#FF6347)) no-repeat;
 	color: #FDE3A7;
 	margin: 0 auto;
+	padding-left: 10%;
+}
+
+header .logo{
+	position: relative;
+	width: 43%;
+	float: left;
 }
 
 header h1 {
+	font-family: Trebuchet MS, sans-serif;
 	top:30px;
-	padding: 0 0 0 20px;
-	font-size: 30px;
-
+	padding: 5px;
+	font-size: 20px;
+	line-height: 1em;
+	border: 2px solid;
+	border-radius: 5px;
+	margin-top: 10px;
+	margin-left: 10px;
+	width: 20%;
+	text-align: center;
 }
 
 header h2 {
 	padding: 0 0 0 20px;
 	font-size: 15px;
-	/*font-weight: normal;*/
 }
 
 /************Navegação************/
 
-nav#menu {
-	display: block;
-	margin-left: 50%;
-	/*top: 0px;
-	left: 0px;*/
-}
-
 nav#menu ul{
 	top:25px;
 	margin: 0;
-	padding: 0 0 0 0;
+	margin-right: -20px;
+	padding: 5px;
 	/*list-style: none;*/
 }
 
 nav#menu li{
 	display: inline-block;
-	background-color: #F2784B;
-	padding: 5px;
-	margin: 2px;
+    padding: 8px;
+    width: 10%;
+    text-align: center;
+    border: 2px solid;
 }
 
 nav#menu li a{
+	font-family: Trebuchet MS, sans-serif;
+	font-size: 11pt;
 	color: #FDE3A7;
 	text-decoration: none;
+}
+
+nav#menu li:hover {
+	background-color: #F2784B;
+  	color: #96281B;
 }
 
 nav#menu li:hover a {
@@ -68,7 +83,10 @@ nav#menu li:hover a {
 /************Conteúdo************/
 
 #principal {
+	position: absolute;
 	margin: 0 auto;
+	background-color: #C0C0C0;
+	width: 100%;
 }
 
 h3#titulo {
@@ -79,6 +97,20 @@ h3#titulo {
 
 /************Formulário************/
 
+div#forms {
+	margin-left: 10%;
+}
+
+div#buttons {
+	position: relative;
+    float: left;
+    width: 450px;
+    height: 100px;
+    left: 10px;
+    text-align: center;
+}
+
+
 fieldset {
 	margin: 10px;
 	padding: 5px;
@@ -88,6 +120,7 @@ fieldset {
 legend{
 	border: 1px solid;
 	background-color: #A9A9A9;
+	padding: 0 5px;
 }
 
 h4, h5{
@@ -96,7 +129,16 @@ h4, h5{
 
 #dadosMcv, #dadosPi{
 	width: 450px;
-	float: left;
+}
+
+#dadosMcv{
+	float:left;
+}
+
+#dadosPi{
+	position: relative;
+    left: 10px;
+    top: 10px;
 }
 
 label{
@@ -107,7 +149,12 @@ label{
 }
 
 label.col2{
-	float: right;
+	top: -15px;
+}
+
+label.radio{
+	display: block;
+	height: 20px;
 }
 
 label > span{
@@ -120,6 +167,7 @@ label > span{
 #leituraMcv > label{
 	height: 30px;
 	width: 50%;
+	float: left;
 }
 
 #leituraMcv > label > span{
@@ -130,6 +178,73 @@ span + input{
 	width: 100px;
 	margin-left: 10px;
 	border: 1px solid;
+}
+
+a.fimEnsaio {
+	text-decoration: none;
+	color: #000000;
+}
+
+/************Tabela************/
+
+td {
+	background-color: #D3D3D3;
+}
+
+td:hover{
+	background-color: #A9A9A9;
+}
+
+th {
+	border: none;
+	background-color: #696969;
+}
+
+th.titulo {
+	font-family: Tahoma;
+	font-size: 12pt;
+	color: #FFFFF0;
+}
+
+th.colEsq {
+	font-family: Tahoma;
+	font-size: 10pt;
+	text-align: right;
+	color: #FFFFF0;
+	padding-right: 5px;
+}
+
+td {
+	text-align: center;
+}
+
+p#redirText{
+	text-align: center;
+}
+
+a.redir {
+	font-weight: bold;
+	font-family: Tahoma, Arial, sans-serif;
+	margin: 0;
+	margin-left: 5px;
+}
+
+a.redir:link {
+	color: #000000;
+	background-color: #A9A9A9;
+	border: 1px solid #000000;
+	text-decoration: none;
+	padding: 5px;
+	outline: none;
+}
+
+a.redir:hover {
+	color: #000000;
+	background-color: #A9A9A9;
+	border: 1px solid #000000;
+	text-decoration: none;
+	padding: 5px;
+	outline: none;
 }
 
 /************Rodapé************/
